moved js to own file, added textarea for messages

--- a/index.html
+++ b/index.html
@@ -5,92 +5,13 @@
 	<title>WebRTC Hello World</title>
 </head>
 <body>
-	<button id="startButton">Start Connection</button>
-	<button id="sendButton">Send "Hello, World"</button>
-	<script>
-		const startButton = document.getElementById('startButton');
-		const sendButton = document.getElementById('sendButton');
-
-		const signalingServer = new WebSocket('ws://localhost:3000');
-		let peerConnection = null;
-		let dataChannel = null;
-
-		// Helper function to check if a message is valid JSON
-		function isJSON(str) {
-			try {
-				JSON.parse(str);
-			} catch (e) {
-				return false;
-			}
-			return true;
-		}
-
-		function processMessage(data) {
-			console.log("Received message:", data);
-
-			if (!isJSON(data)) {
-				console.warn("Non-JSON message received:", data);
-				return;
-			}
-
-			const parsedData = JSON.parse(data);
-
-			if (parsedData.offer) {
-				peerConnection.setRemoteDescription(new RTCSessionDescription(parsedData.offer))
-					.then(() => peerConnection.createAnswer())
-					.then(answer => peerConnection.setLocalDescription(answer))
-					.then(() => signalingServer.send(JSON.stringify({ answer: peerConnection.localDescription })));
-			} else if (parsedData.answer) {
-				peerConnection.setRemoteDescription(new RTCSessionDescription(parsedData.answer));
-			} else if (parsedData.candidate) {
-				peerConnection.addIceCandidate(new RTCIceCandidate(parsedData.candidate));
-			}
-		}
-
-		signalingServer.onmessage = async (message) => {
-
-			if (message.data instanceof Blob) {
-				// Convert Blob to text
-				message.data.text().then((text) => {
-					processMessage(text);
-				});
-			} else {
-				processMessage(message.data);
-			}
-
-		};
-
-		startButton.onclick = async () => {
-			peerConnection = new RTCPeerConnection();
-
-			// Create the data channel for sending messages
-			dataChannel = peerConnection.createDataChannel("chat");
-			dataChannel.onopen = () => console.log("Data channel open");
-			dataChannel.onmessage = (event) => console.log("Received message:", event.data);
-
-			// ICE candidate handling
-			peerConnection.onicecandidate = (event) => {
-				if (event.candidate) {
-					signalingServer.send(JSON.stringify({ candidate: event.candidate }));
-				}
-			};
-
-			// Listening for the remote data channel
-			peerConnection.ondatachannel = (event) => {
-				event.channel.onmessage = (e) => console.log("Received message:", e.data);
-			};
-
-			// Create an offer if this is the first client
-			const offer = await peerConnection.createOffer();
-			await peerConnection.setLocalDescription(offer);
-			signalingServer.send(JSON.stringify({ offer }));
-		};
-
-		sendButton.onclick = () => {
-			if (dataChannel && dataChannel.readyState === "open") {
-				dataChannel.send("Hello, World");
-			}
-		};
-	</script>
+	<p>
+		<button id="startButton">Start Connection</button>
+		<button id="sendButton">Send "Hello, World"</button>
+	</p>
+	<p>
+		<textarea id="messages" rows="20" cols="33" readonly></textarea>
+	</p>
+	<script type="text/javascript" src="index.js" defer></script>
 </body>
 </html>
