--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>WebRTC Hello World</title>
+	<title>ImagePush</title>
 </head>
 <body>
-	<p>
-		<button id="startButton">Start Connection</button>
-		<button id="sendButton">Send "Hello, World"</button>
-	</p>
-	<p>
-		<textarea id="messages" rows="20" cols="33" readonly></textarea>
-	</p>
-	<script type="text/javascript" src="index.js" defer></script>
+	<p><a href="presenter.html">Presenter</a> or <a href="viewer.html">Viewer</a></p>
 </body>
 </html>
