moved js files into own subfolder

--- a/presenter.html
+++ b/presenter.html
@@ -10,7 +10,7 @@
 	<p>
 		<button id="sendButton">Send "Hello, World"</button>
 	</p>
-	<script type="text/javascript" src="connection.js" defer></script>
-	<script type="text/javascript" src="presenter.js" defer></script>
+	<script type="text/javascript" src="js/connection.js" defer></script>
+	<script type="text/javascript" src="js/presenter.js" defer></script>
 </body>
 </html>
