--- a/viewer.html
+++ b/viewer.html
@@ -10,7 +10,7 @@
 	<p>
 		<textarea id="messages" rows="20" cols="33" readonly></textarea>
 	</p>
-	<script type="text/javascript" src="connection.js" defer></script>
-	<script type="text/javascript" src="viewer.js" defer></script>
+	<script type="text/javascript" src="js/connection.js" defer></script>
+	<script type="text/javascript" src="js/viewer.js" defer></script>
 </body>
 </html>
