--- a/presenter.html
+++ b/presenter.html
@@ -5,11 +5,21 @@
 	<title>ImagePush</title>
 </head>
 <body>
-	<p id="connectionstatus">connecting …</p>
-	<p id="datachannelstatus">waiting for data channel …</p>
+
+	<p>
+		<button id="reconnect">force reconnect</button>
+	</p>
+	
+	<ul>
+		<li id="connectionstatus">connecting …</li>
+		<li id="peerconnectionstatus">waiting for peer connection …</li>
+		<li id="datachannelstatus">waiting for data channel …</li>
+	</ul>
+
 	<p>
 		<button id="sendButton">Send "Hello, World"</button>
 	</p>
+
 	<script type="text/javascript" src="js/connection.js" defer></script>
 	<script type="text/javascript" src="js/presenter.js" defer></script>
 </body>
