--- a/viewer.html
+++ b/viewer.html
@@ -11,16 +11,16 @@
 	</p>
 	
 	<ul>
-		<li id="connectionstatus">connecting …</li>
-		<li id="peerconnectionstatus">waiting for peer connection …</li>
-		<li id="datachannelstatus">waiting for data channel …</li>
+		<li>signalingServer: <span id="signalingServerStatus">connecting …</span></li>
+		<li>peerConnection: <span id="peerConnectionStatus">waiting …</span></li>
+		<li>dataChannel: <span id="dataChannelStatus">waiting …</span></li>
 	</ul>
 
 	<p>
 		<textarea id="messages" rows="20" cols="33" readonly></textarea>
 	</p>
 
-	<script type="text/javascript" src="js/connection.js" defer></script>
 	<script type="text/javascript" src="js/viewer.js" defer></script>
+	<script type="text/javascript" src="js/connection.js" defer></script>
 </body>
 </html>
