--- a/presenter.html
+++ b/presenter.html
@@ -13,7 +13,8 @@
 	<ul>
 		<li>signalingServer: <span id="signalingServerStatus">connecting …</span></li>
 		<li>peerConnection: <span id="peerConnectionStatus">waiting …</span></li>
-		<li>dataChannel: <span id="dataChannelStatus">waiting …</span></li>
+		<li>remoteDataChannel: <span id="remoteDataChannelStatus">waiting …</span></li>
+		<li>localDataChannel: <span id="localDataChannelStatus">waiting …</span></li>
 	</ul>
 
 	<p>
