more logging and shuffling things around

--- a/presenter.html
+++ b/presenter.html
@@ -7,10 +7,12 @@
 <body>
 
 	<ul>
-		<li>signalingServer: <span id="signalingServerStatus">connecting …</span></li>
-		<li>peerConnection: <span id="peerConnectionStatus">waiting …</span></li>
-		<li>remoteDataChannel: <span id="remoteDataChannelStatus">waiting …</span></li>
-		<li>localDataChannel: <span id="localDataChannelStatus">waiting …</span></li>
+		<li>signalingServer: <span id="signalingServerStatus"></span></li>
+		<li>iceConnection: <span id="iceConnectionStatus"></span></li>
+		<li>peerConnection: <span id="peerConnectionStatus"></span></li>
+		<li>signalingState: <span id="signalingStateStatus"></span></li>
+		<li>remoteDataChannel: <span id="remoteDataChannelStatus"></span></li>
+		<li>localDataChannel: <span id="localDataChannelStatus"></span></li>
 	</ul>
 
 	<p>
