--- a/presenter.html
+++ b/presenter.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ImagePush Presenter</title>
 
-	<script type="text/javascript" src="js/presenter.js" defer></script>
+	<script type="text/javascript" src="assets/js/presenter.js" defer></script>
 
 </head>
 <body>
