--- a/viewer.html
+++ b/viewer.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ImagePush Viewer</title>
 
-	<script type="text/javascript" src="js/viewer.js" defer></script>
+	<script type="text/javascript" src="assets/js/viewer.js" defer></script>
 
 </head>
 <body>
