added css files

--- a/presenter.html
+++ b/presenter.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ImagePush Presenter</title>
 
+	<link rel="stylesheet" href="assets/css/presenter.css" type="text/css" media="all">
 	<script type="text/javascript" src="assets/js/presenter.js" defer></script>
 
 </head>
