--- a/viewer.html
+++ b/viewer.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ImagePush Viewer</title>
 
+	<link rel="stylesheet" href="assets/css/viewer.css" type="text/css" media="all">
 	<script type="text/javascript" src="assets/js/viewer.js" defer></script>
 
 </head>
