presenter: drag&drop images into gallery

--- a/presenter.html
+++ b/presenter.html
@@ -20,5 +20,12 @@
 		<button id="sendButton">Send "Hello World"</button>
 	</p>
 
+	<div id="drop-area" class="drop-area">
+		<p>Drag one or more images here to add them to the gallery</p>
+	</div>
+
+	<ul id="gallery" class="gallery">
+	</ul>
+
 </body>
 </html>
