updated gallery to use radio buttons; added 'remove' button to gallery elements

--- a/presenter.html
+++ b/presenter.html
@@ -24,7 +24,12 @@
 	</div>
 
 	<ul id="gallery" class="gallery">
-		<li id="no-image" class="active no-image">(no image)</li>
+		<li id="no-image">
+			<label>
+				<span class="element-title no-image">(no image)</span>
+				<input id="selected-element-none" type="radio" name="selected-element" value="no-image" checked>
+			</label>
+		</li>
 	</ul>
 
 </body>
