include drop-area in gallery

--- a/presenter.html
+++ b/presenter.html
@@ -19,16 +19,15 @@
 
 	<div id="peerConnections" class="peer-connections"></div>
 
-	<div id="drop-area" class="drop-area">
-		<p>Drag one or more images here to add them to the gallery</p>
-	</div>
-
 	<ul id="gallery" class="gallery">
-		<li id="no-image">
+		<li>
 			<label>
 				<span class="element-title no-image">(no image)</span>
 				<input id="selected-element-none" type="radio" name="selected-element" value="no-image" checked>
 			</label>
+		</li>
+		<li id="drop-area" class="drop-area">
+			<p>Drag one or more images here to add them to the gallery</p>
 		</li>
 	</ul>
 
