added options.js for port & host config

--- a/presenter.html
+++ b/presenter.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="assets/css/variables.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/presenter.css" type="text/css" media="all">
 
-	<script type="text/javascript" src="assets/js/variables.js" defer></script>
+	<script type="text/javascript" src="options.js" defer></script>
 	<script type="text/javascript" src="assets/js/presenter.js" defer></script>
 
 </head>
